--- a/src/Lestaly.csproj
+++ b/src/Lestaly.csproj
@@ -34,6 +34,7 @@
     <DeterministicSourcePaths>true</DeterministicSourcePaths>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.96.0" />
     <PackageReference Include="CometFlavor" Version="0.1.0" />
   </ItemGroup>
   <ItemGroup>
