--- a/src/Lestaly.csproj
+++ b/src/Lestaly.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.96.0" />
     <PackageReference Include="CometFlavor" Version="0.1.0" />
+    <PackageReference Include="CometFlavor.Unicode" Version="0.1.0" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
