--- a/src/Lestaly.csproj
+++ b/src/Lestaly.csproj
@@ -33,14 +33,17 @@
   <PropertyGroup>
     <DeterministicSourcePaths>true</DeterministicSourcePaths>
   </PropertyGroup>
+  <PropertyGroup>
+    <PackageOutputPath>$(MSBuildThisFileDirectory)/../packages</PackageOutputPath>
+  </PropertyGroup>
+  <ItemGroup>
+    <SourceRoot Include="$(MSBuildThisFileDirectory)" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.96.0" />
     <PackageReference Include="CometFlavor" Version="0.6.0" />
     <PackageReference Include="CometFlavor.Unicode" Version="0.1.0" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="6.0.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <SourceRoot Include="$(MSBuildThisFileDirectory)" />
   </ItemGroup>
 
 </Project>
