--- a/src/Lestaly.csproj
+++ b/src/Lestaly.csproj
@@ -43,6 +43,7 @@
     <PackageReference Include="ClosedXML" Version="0.97.0" />
     <PackageReference Include="CometFlavor" Version="0.14.0" />
     <PackageReference Include="CometFlavor.Unicode" Version="0.2.0" />
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="7.0.0" />
   </ItemGroup>
 
