--- a/src/Lestaly.csproj
+++ b/src/Lestaly.csproj
@@ -45,6 +45,7 @@
     <PackageReference Include="CometFlavor.Unicode" Version="0.2.0" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="7.0.0" />
+    <PackageReference Include="Zstring" Version="2.5.0" />
   </ItemGroup>
 
 </Project>
