--- a/tests/LestalyTest.csproj
+++ b/tests/LestalyTest.csproj
@@ -24,6 +24,7 @@
     </PackageReference>
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
