--- a/src/Lestaly.csproj
+++ b/src/Lestaly.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="CometFlavor.Unicode" Version="0.7.0" />
+    <PackageReference Include="System.DirectoryServices.Protocols" Version="9.0.3" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="9.0.3" />
   </ItemGroup>
 
