--- a/src/Lestaly/Lestaly.csproj
+++ b/src/Lestaly/Lestaly.csproj
@@ -7,7 +7,9 @@
     <RootNamespace>Lestaly</RootNamespace>
 
     <IncludeBuildOutput>false</IncludeBuildOutput>
-    <NoBuild>true</NoBuild>
+    <IsPackable>true</IsPackable>
+    <PackProjectReferences>true</PackProjectReferences>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup>
