--- a/tests/LestalyTest.csproj
+++ b/tests/LestalyTest.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="AwesomeAssertions" Version="9.3.0" />
+    <PackageReference Include="CometFlavor.Unicode" Version="0.7.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="MSTest.TestAdapter" Version="4.0.2" />
